--- a/templates/my-items.html
+++ b/templates/my-items.html
@@ -1,7 +1,7 @@
 <div class="row" ng-controller="MyItemsController">
     <div class="table-container">
         <!-- My active items -->
-        <table class="my-items-table">
+        <table class="my-items-table active-table">
             <thead>
             <tr class="table-header active">
                 <td colspan="9">
@@ -48,11 +48,8 @@
             </tbody>
         </table>
 
-        <br/>
-        <br/>
-        <br/>
         <!-- My expired items -->
-        <table class="my-items-table">
+        <table class="my-items-table expired-table">
             <thead>
             <tr class="table-header expired">
                 <td colspan="9">
