decorate scroll view

--- a/templates/expired-bids.html
+++ b/templates/expired-bids.html
@@ -50,4 +50,6 @@
             </div>
         </li>
     </ul>
+    <img src="../images/trans-left.png" style="position: absolute; top: 0; left: 0; z-index: 2;">
+    <img src="../images/trans-right.png" style="position: absolute; top: 0; right: 0; z-index: 2;">
 </div>
