--- a/css/custom.css
+++ b/css/custom.css
@@ -191,6 +191,10 @@ ul.card-list li {
     position: relative;
 }
 
+.expired-card {
+    -webkit-filter: grayscale(0.5); filter: grayscale(0.5);
+}
+
 .card {
     width: 267px;
     height: 363px;
