check expiry date when inserting item

--- a/css/custom.css
+++ b/css/custom.css
@@ -166,8 +166,8 @@ ul.custom-nav li .director {
 
 .body {
     background-color: #fff;
-    /*min-height: 200px;*/
-    height: 423px;
+    min-height: 200px;
+    /*height: 423px;*/
 }
 
 .body-inner {
@@ -596,7 +596,4 @@ textarea {
 }
 .my-items-table-nodata{
     text-align: center;
-}
-.loading-container {
-    margin-top: 100px;
 }
